--- a/css/style.css
+++ b/css/style.css
@@ -87,24 +87,16 @@ header{
 /* Search bar styles */
 
 .search-bar {
-  display: flex;
-  justify-content: center;
-  padding: 24px;
+    text-align: center;
+    margin: 2px 10;
 }
 
-.search-bar input{
-  width: 50%;
-  min-width: 300px;
-  padding: 12px 24px;
-  border-radius: 24px;
-  font-size: 16px;
-  border: 0px;
-  outline: none;
-}
-
-/*.search-bar [.container]::-webkit-list-button,
-.search-bar [.container]::-webkit-calendar-picker-indicator {
-  display: none !important;
+.search-bar input[type="search"] {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 60%;
+    background: #fff url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
 }
 
 
@@ -172,18 +164,6 @@ header{
   top: 200px;
 }
 
-.container{
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  top: 200px;
-  margin-top: 50px;
-}
-
 /*Styles for product card*/
 
 .product .product-card {
@@ -192,7 +172,7 @@ header{
   position: relative;
   width: 300px;
   height: 500px;
-  margin: 60px;
+  margin: 40px;
   border-radius: 10px;
 }
 
@@ -212,8 +192,8 @@ header{
 .product .product-card .product-img {
   z-index: 1;
   position: absolute;
-  max-width: 270px;
-  max-height: 300px;
+  max-width: 370px;
+  max-height: 430px;
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
