--- a/views/kids.hbs
+++ b/views/kids.hbs
@@ -67,7 +67,7 @@
 
         </header>
         <div id="characterList" class="characterLists"></div>
-        <div class="container-1-3">
+        <div class="container">
 {{!--           <div class="product">
             <div class="product-card">
               <h2 class="name">Girls dress</h2>
