--- a/views/men-shoes.hbs
+++ b/views/men-shoes.hbs
@@ -66,7 +66,7 @@
 
         </header>
         <div id="characterList" class="characterLists"></div>
-        <div class="container-1-4">
+        <div class="container">
           {{!-- <div class="product">
             <div class="product-card">
               <h2 class="name">Men Shoes</h2>
