--- a/views/men.hbs
+++ b/views/men.hbs
@@ -58,7 +58,9 @@
                     
                   </div>
                   <a class="login-button"href="#">login</a>
+                  <div class="add-cart">
                   <a class="add-cart" href="/cart"><i class="fa fa-shopping-cart" style="font-size:24px"></i><span>0</span></a>
+                  </div>
                 </div>
               </nav>
               <div class="search-bar">
@@ -70,7 +72,7 @@
         </header>
         <br>
         <div id="characterList" class="characterLists"></div> 
-        <div class="container-1-1" id="container"></div>
+        <div class="container" id="container"></div>
 
 
       
