--- a/views/women.hbs
+++ b/views/women.hbs
@@ -66,7 +66,7 @@
 
         </header>
         <div id="characterList" class="characterLists"></div>
-        <div class="container-1-2"></div>
+        <div class="container"></div>
         
 
         <script src="/product-cards.js"></script>
