--- a/views/men.hbs
+++ b/views/men.hbs
@@ -44,7 +44,7 @@
                         <a class="nav-link" id="women-products" href="/women">Women</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/kids">Kids</a>
+                        <a class="nav-link" id="kids-products" href="/kids">Kids</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Footwear</a>
